# humble-prelude

./: .travis.yml  CHANGELOG.md  README.md  humble-prelude.cabal
src/: HumblePrelude.hs
src/HumblePrelude/: Extras.hs  Plugin.hs
