cabal-version:       2.4
name:                humble-prelude
version:             0
synopsis:            Get rid of bad habits
description:         See README.md.........
bug-reports:         https://github.com/fumieval/humble-prelude
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) Fumiaki Kinoshita
category:            Prelude
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/fumieval/humble-prelude

library
  exposed-modules:
    HumblePrelude
    HumblePrelude.Extras
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12.0.0 && <5
    , bytestring
    , text
    , deepseq
  hs-source-dirs: src
  default-language:    Haskell2010
